# second-opinion

./: .gitignore  LICENSE  README.md  action.yml  fib.py  pyproject.toml
.github/workflows/: second-opinion.yml
python/: second_opinion.py  second_opinion_test.py
src/second_opinion/: __init__.py
